# minic

./: Benchmark Times.xlsx  Final Report.docx
minic/: Cargo.toml  README  all_benchmarks.sh  benchmark.sh
minic/benchmarks/BenchMarkishTopics/: BenchMarkishTopics.c.s  BenchMarkishTopics.s
minic/benchmarks/Fibonacci/: Fibonacci.c.s  Fibonacci.s
minic/benchmarks/GeneralFunctAndOptimize/: GeneralFunctAndOptimize.c.s  GeneralFunctAndOptimize.s
minic/benchmarks/OptimizationBenchmark/: OptimizationBenchmark.c.s  OptimizationBenchmark.s
minic/benchmarks/TicTac/: TicTac.c.s  TicTac.s
minic/benchmarks/bert/: bert.c.s  bert.s
minic/benchmarks/biggest/: biggest.c.s  biggest.s
minic/benchmarks/binaryConverter/: binaryConverter.c.s  binaryConverter.s
minic/benchmarks/brett/: brett.c.s  brett.s
minic/benchmarks/creativeBenchMarkName/: creativeBenchMarkName.c.s  creativeBenchMarkName.s
minic/benchmarks/fact_sum/: fact_sum.c.s  fact_sum.s
minic/benchmarks/hailstone/: hailstone.c.s  hailstone.s
minic/benchmarks/hanoi_benchmark/: hanoi_benchmark.c.s  hanoi_benchmark.s
minic/benchmarks/killerBubbles/: killerBubbles.c.s  killerBubbles.s
minic/benchmarks/mile1/: mile1.c.s  mile1.s
minic/benchmarks/mixed/: mixed.c.s  mixed.s
minic/benchmarks/primes/: primes.c.s  primes.s
minic/benchmarks/programBreaker/: programBreaker.c.s  programBreaker.s
minic/benchmarks/stats/: stats.c.s  stats.s
minic/benchmarks/wasteOfCycles/: wasteOfCycles.c.s  wasteOfCycles.s
minic/src/: context_list.rs  helper.c  lexer.rs  main.rs  type_checker.rs  type_checker_joe.rs
(+34 files in other folders)
