[package]
name = "minic"
version = "0.1.0"
authors = ["Ian Atol <iatol@calpoly.edu>", "Joe Emenaker <joe@emenaker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
pest = "2.0"
pest_derive = "2.0"
regex = "1"
log = "0.4"
getopts = "0.2"
